--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -655,11 +655,11 @@ on property:persist.radio.otaconfig=0
 on property:persist.radio.otaconfig=1
     setprop persist.radio.start_ota_daemon 1
 
-service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /system/vendor/etc/msm_irqbalance.conf
-    class core
-    user root
-    group root
-    disabled
+#service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /system/vendor/etc/msm_irqbalance.conf
+#    class core
+#    user root
+#    group root
+#    disabled
 
 service wfdservice /system/bin/wfdservice
     class main
